--- a/platforms/browser/www/paketRegular.html
+++ b/platforms/browser/www/paketRegular.html
@@ -27,10 +27,26 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.grey-pink.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Angular JS -->
+    <script src="js/angular.min.js"></script>
+    <!-- Angular Route Module -->
+    <script src="js/angular-route.js"></script>
+    <!-- Loading Bar -->
+    <script src="js/loading-bar.js"></script>
+    <link href="js/loading-bar.css" rel='stylesheet' />
+
+     <!-- App JS -->
+    <script src="js/app.js"></script>
+
+    <!-- Regular Packages Controller -->
+    <script src="angular/controller/regularPackagesController.js"></script>
+
+   
 </head>
 
 
-<body>
+<body ng-app="dreamtour" ng-controller="RegularPackagesController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
             <div class="mdl-layout__header-row portfolio-logo-row">
@@ -56,38 +72,9 @@
                 <a class="mdl-navigation__link" href="contact.html">Contact</a>
             </nav>
         </div>
-        <main class="mdl-layout__content">
-            <div class="mdl-grid portfolio-max-width">
-                <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card  mdl-card mdl-shadow--4dp portfolio-blog-card-compact">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src="img/umrah-desember.png" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title ">
-                        <h2 class="mdl-card__title-text">Paket Umroh Plus Turki</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        Paket Umroh Plus Turki. 13 Hari 12 Malam. Keberangkatan tanggal 21 April 2016
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a href="detail.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">
-                          Lihat
-                        </a>
-                    </div>
-                </div>
-                
-            </div>
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">PT Dream Tour</div>
-                </div>
-                <div class="mdl-mini-footer__right-section">
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Privacy & Terms</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </main>
+        
+        <div ng-include src="list-regular.html"></div>
+
     </div>
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </body>
