--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -73,7 +73,23 @@
             </nav>
         </div>
         
-        <div ng-include src="list-regular.html"></div>
+        <!--  <main class="mdl-layout__content" ng-include="'list-regular.html'"></main> -->
+        <main class="mdl-layout__content">
+
+            <div ng-include="state + '.html'"></div>
+
+            <footer class="mdl-mini-footer">
+                <div class="mdl-mini-footer__left-section">
+                    <div class="mdl-logo">PT Dream Tour</div>
+                </div>
+                <div class="mdl-mini-footer__right-section">
+                    <ul class="mdl-mini-footer__link-list">
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">Privacy & Terms</a></li>
+                    </ul>
+                </div>
+            </footer>
+        </main>
 
     </div>
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
