--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -35,24 +35,20 @@
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
                     <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">Paket Umrah</span>
+                    <span class="mdl-layout__title">Mobile Apps</span>
                 </span>
             </div>
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                    <a class="mdl-navigation__link" href="index.html">Portfolio</a>
-                    <a class="mdl-navigation__link" href="blog.html">Blog</a>
-                    <a class="mdl-navigation__link is-active" href="about.html">About</a>
-                    <a class="mdl-navigation__link" href="contact.html">Contact</a>
+                    <a class="mdl-navigation__link is-active" href="index.html">Home</a>
+                    <a class="mdl-navigation__link" href="blog.html">Umroh Packages</a>
                 </nav>
             </div>
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                <a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
-                <a class="mdl-navigation__link" href="blog.html">Blog</a>
-                <a class="mdl-navigation__link" href="about.html">About</a>
-                <a class="mdl-navigation__link" href="contact.html">Contact</a>
+                <a class="mdl-navigation__link is-active" href="index.html">Home</a>
+                <a class="mdl-navigation__link" href="pilihpaket.html">Umroh Packages</a>
             </nav>
         </div>
         <main class="mdl-layout__content">
@@ -77,17 +73,19 @@
             <div class="mdl-grid portfolio-max-width">
 
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Umrah Exclusive</h2>
-                    </div>
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" img/umrah-plus.png" border="0" alt="">
-                    </div>
+                    <a href="paketExclusive.html" style="text-decoration : none;">
+                        <div class="mdl-card__title">
+                            <h2 class="mdl-card__title-text">Umrah Exclusive</h2>
+                        </div>
+                        <div class="mdl-card__media">
+                            <img class="article-image" src=" img/umrah-plus.png" border="0" alt="">
+                        </div>
 
-                    <!-- <div class="mdl-grid portfolio-copy">
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
-                        
-                    </div> -->
+                        <!-- <div class="mdl-grid portfolio-copy">
+                            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+                            
+                        </div> -->
+                    </a>
                 </div>
             </div>
             <footer class="mdl-mini-footer">
