--- a/platforms/browser/www/pilihpaket.html
+++ b/platforms/browser/www/pilihpaket.html
@@ -21,16 +21,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A portfolio template that uses Material Design Lite.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>MDL-Static Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />
+    <title>Dream Tour</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="css/material.grey-pink.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
+
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
@@ -45,7 +47,7 @@
                 </nav>
             </div>
         </header>
-        <div class="mdl-layout__drawer mdl-layout--small-screen-only" style="-webkit-transform: translateZ(0);">
+        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link is-active" href="index.html">Home</a>
                 <a class="mdl-navigation__link" href="pilihpaket.html">Umroh Packages</a>
@@ -95,7 +97,10 @@
             </footer>
         </main>
     </div>
+    <script type="text/javascript" src="cordova.js"></script>
     <script src="js/material.min.js"></script>
 </body>
 
 </html>
+
+
