--- a/www/feedback.html
+++ b/www/feedback.html
@@ -37,6 +37,8 @@
     <link href="js/loading-bar.css" rel='stylesheet' />
 
      <!-- App JS -->
+     <script src="angular/ng-modules/angular-ui-router/build/angular-ui-router.js"></script>
+    <script src="angular/ng-modules/satellizer/satellizer.js"></script>
     <script src="js/app.js"></script>
 
     <!-- Regular Packages Controller -->
