--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -62,7 +62,7 @@
                             <h2 class="mdl-card__title-text">Umrah Regular</h2>
                         </div>
                         <div class="mdl-card__media">
-                            <img class="article-image" src=" img/umrah-regular.png" border="0" alt="">
+                            <img class="article-image" src=" img/umrah-regular.jpg" border="0" alt="">
                         </div>
 
                         <!-- <div class="mdl-grid portfolio-copy">
@@ -80,7 +80,7 @@
                             <h2 class="mdl-card__title-text">Umrah Exclusive</h2>
                         </div>
                         <div class="mdl-card__media">
-                            <img class="article-image" src=" img/umrah-plus.png" border="0" alt="">
+                            <img class="article-image" src=" img/umrah-plus.jpg" border="0" alt="">
                         </div>
 
                         <!-- <div class="mdl-grid portfolio-copy">
