--- a/www/chat.html
+++ b/www/chat.html
@@ -39,6 +39,9 @@
     <link href="js/loading-bar.css" rel='stylesheet' />
 
      <!-- App JS -->
+
+    <script src="angular/ng-modules/angular-ui-router/build/angular-ui-router.js"></script>
+    <script src="angular/ng-modules/satellizer/satellizer.js"></script>
     <script src="js/app.js"></script>
 
     <!-- Regular Packages Controller -->
@@ -58,7 +61,7 @@
   <body ng-app="dreamtour" ng-controller="ChatController">
 
     <div class="menu">
-            <div class="back"><a href="chatroom.html"><i class="fa fa-chevron-left"></i></a> <img src="img/umrah-plus.png" draggable="false"/></div>
+            <div class="back"><a href="chatroom.html"><i class="fa fa-chevron-left"></i></a> <img src="img/umrah-plus.jpg" draggable="false"/></div>
             <div class="name">Umroh Desember 2016</div>
         </div>
     <div  id="chatBox" schroll-bottom="chats">
