--- a/www/doa2.html
+++ b/www/doa2.html
@@ -38,12 +38,7 @@
                     <span class="mdl-layout__title">Doa</span>
                 </span>
             </div>
-            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                    <a class="mdl-navigation__link is-active" href="index.html">Home</a>
-                    <a class="mdl-navigation__link" href="blog.html">Umroh Packages</a>
-                </nav>
-            </div>
+            
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -52,22 +47,12 @@
             </nav>
         </div>
         <main class="mdl-layout__content">
-            <div class="mdl-grid portfolio-max-width">
+            <div class="mdl-grid portfolio-max-width doa">
 
                <img src="img/doa1.png" style="width: 100%; height: 100%;">
 
             </div>
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">PT Dream Tour</div>
-                </div>
-                <div class="mdl-mini-footer__right-section">
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Privacy & Terms</a></li>
-                    </ul>
-                </div>
-            </footer>
+            
         </main>
     </div>
     <script src="js/material.min.js"></script>
