--- a/www/index.html
+++ b/www/index.html
@@ -27,19 +27,20 @@
     <link rel="stylesheet" href="css/material.grey-pink.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
-
+    <script src="js/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
+            <!-- <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
                     <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">Mobile Apps</span>
+                    <span id="gcm_id" class="mdl-layout__title">Mobile Apps</span>
+                    <p id="gcm_id"></p>
                 </span>
-            </div>
+            </div> -->
 <!--             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Home</a>
@@ -56,6 +57,7 @@
         </div>
         <main class="mdl-layout__content">
                 <div class="mdl-grid">
+                    <div class="portfolio-logo"></div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="pilihpaket.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
                           <img src="img/paket.jpg" style="width:100%; height:100%;">
@@ -112,6 +114,34 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/material.min.js"></script>
+    <script src="js/index.js"></script>
+    <script type="text/javascript">
+        document.addEventListener("deviceready",onDeviceReady,false);
+        function onDeviceReady(){
+        console.log("Device Ready")
+        var push = PushNotification.init({ "android": {"senderID": "202371380195"},
+        "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
+
+        push.on('registration', function(data) {
+        console.log(data.registrationId);
+        $("#gcm_id").html(data.registrationId);
+        });
+
+        push.on('notification', function(data) {
+        console.log(data.message);
+        alert(data.title+" Message: " +data.message);
+        // data.title,
+        // data.count,
+        // data.sound,
+        // data.image,
+        // data.additionalData
+        });
+
+        push.on('error', function(e) {
+        console.log(e.message);
+        });
+        }
+    </script>
 </body>
 
 </html>
