--- a/www/newsletter.html
+++ b/www/newsletter.html
@@ -47,14 +47,8 @@
 
 <body ng-app="dreamtour" ng-controller="NewsletterController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
-                <span class="mdl-layout__title">
-                    <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">Mobile Apps</span>
-                </span>
-            </div>
-           
+        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
+    overflow-y: hidden;">
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -64,6 +58,7 @@
         </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width" ng-repeat="news in newsletters">
+            <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card  mdl-card mdl-shadow--4dp portfolio-blog-card-compact">
                     <div class="mdl-card__title ">
                         <h2 class="mdl-card__title-text">{{ news.title }}</h2>
