--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -23,14 +23,8 @@
 
 <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
-        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
-                <span class="mdl-layout__title">
-                    <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">Mobile Apps</span>
-                </span>
-            </div>
-           
+        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
+    overflow-y: hidden;">
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -41,6 +35,7 @@
         </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid">
+                <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
                 <div style="position:relative; height:330px; width: 100%;">
                     <div id=compass></div>
                     <div id=needle></div>
