--- a/www/chatroom.html
+++ b/www/chatroom.html
@@ -47,14 +47,8 @@
 
 <body ng-app="dreamtour" ng-controller="ChatRoomController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-       <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
-                <span class="mdl-layout__title">
-                    <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">Chat Room</span>
-                </span>
-            </div>
-           
+       <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
+    overflow-y: hidden;">
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -64,16 +58,16 @@
         </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
-
+                <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
                 <ul class="demo-list-item mdl-list">
-  <li class="mdl-list__item" ng-repeat="room in rooms">
-    <span class="mdl-list__item-primary-content"><a href="chat.html?id={{ room.id }}">
-      {{ room.name }}</a>
-    </span>
+                  <li class="mdl-list__item" ng-repeat="room in rooms">
+                    <span class="mdl-list__item-primary-content"><a href="chat.html?id={{ room.id }}">
+                      {{ room.name }}</a>
+                    </span>
 
-  </li>
+                  </li>
 
-</ul>
+                </ul>
 
 
             </div>
