--- a/www/index.html
+++ b/www/index.html
@@ -33,19 +33,14 @@
 
 <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
-        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
+        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
+    overflow-y: hidden;">
             <!-- <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
                     <div class="portfolio-logo"></div>
                     <span id="gcm_id" class="mdl-layout__title">Mobile Apps</span>
                     <p id="gcm_id"></p>
                 </span>
-            </div> -->
-<!--             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                    <a class="mdl-navigation__link is-active" href="index.html">Home</a>
-                    <a class="mdl-navigation__link" href="blog.html">Umroh Packages</a>
-                </nav>
             </div> -->
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
@@ -57,7 +52,7 @@
         </div>
         <main class="mdl-layout__content">
                 <div class="mdl-grid">
-                    <div class="portfolio-logo"></div>
+                    <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="pilihpaket.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
                           <img src="img/paket.jpg" style="width:100%; height:100%;">
