--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -33,14 +33,8 @@
 
 <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
-        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
-                <span class="mdl-layout__title">
-                    <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">Mobile Apps</span>
-                </span>
-            </div>
-           
+        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
+    overflow-y: hidden;">
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -51,6 +45,7 @@
         </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid">
+              <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
                 <div class="demo-card-image mdl-card mdl-shadow--2dp" style="background: url('img/subuh.jpg') center / cover;">
             <div class="mdl-card__title mdl-card--expand">
               <p style="color:white;">
