--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -29,6 +29,15 @@
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <style type="text/css">
+        a {
+            color: rgb(39, 30, 125);
+        }
+
+        .mdl-card__media {
+            background-color: rgb(39, 30, 125);
+        }
+    </style>
 </head>
 
 <body>
@@ -84,6 +93,7 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/material.min.js"></script>
+
 </body>
 
 </html>
