Paket regular link color

--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -44,6 +44,19 @@
     <!-- Regular Packages Controller -->
     <script src="angular/controller/regularPackagesController.js"></script>
 
+    <style type="text/css">
+       a {
+            color: rgb(39, 30, 125);
+        }
+
+        .mdl-card__media {
+            background-color: rgb(39, 30, 125);
+        }
+
+        .mdl-button--accent.mdl-button--accent {
+            color: rgb(39, 30, 125);
+        }
+    </style>
    
 </head>
 
