--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -76,7 +76,7 @@
         <!--  <main class="mdl-layout__content" ng-include="'list-regular.html'"></main> -->
         <main class="mdl-layout__content">
             <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
-            <div ng-include="state + '.html'"></div>
+            <div ng-include="state + '.html'" autoscroll="true"></div>
 
            
         </main>
