Feedback & message Color

--- a/www/feedback.html
+++ b/www/feedback.html
@@ -43,6 +43,23 @@
 
     <!-- Regular Packages Controller -->
     <script src="angular/controller/feedbackController.js"></script>
+    <style type="text/css">
+       a {
+            color: rgb(39, 30, 125);
+        }
+
+        .mdl-card__media {
+            background-color: rgb(39, 30, 125);
+        }
+
+        .mdl-button--accent.mdl-button--accent {
+            color: rgb(39, 30, 125);
+        }
+
+        .mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab {
+            background-color: rgb(39, 30, 125);
+        }
+    </style>
 </head>
 
 <body ng-app="dreamtour" ng-controller="FeedbackController">
