--- a/www/message.html
+++ b/www/message.html
@@ -27,6 +27,23 @@
     <link rel="stylesheet" href="css/material.grey-pink.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <style type="text/css">
+       a {
+            color: rgb(39, 30, 125);
+        }
+
+        .mdl-card__media {
+            background-color: rgb(39, 30, 125);
+        }
+
+        .mdl-button--accent.mdl-button--accent {
+            color: rgb(39, 30, 125);
+        }
+
+        .mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab {
+            background-color: rgb(39, 30, 125);
+        }
+    </style>
 </head>
 
 <body>
