--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,25 @@
     <link rel="stylesheet" href="css/styles.css" />
 
     <script src="js/jquery.min.js"></script>
+     <!-- Angular JS -->
+    <script src="js/angular.min.js"></script>
+    <!-- Angular Route Module -->
+    <script src="js/angular-route.js"></script>
+    <!-- Loading Bar -->
+    <script src="js/loading-bar.js"></script>
+    <link href="js/loading-bar.css" rel='stylesheet' />
+
+     <!-- App JS -->
+     <script src="angular/ng-modules/angular-ui-router/build/angular-ui-router.js"></script>
+    <script src="angular/ng-modules/satellizer/satellizer.js"></script>
+    <script src="js/app.js"></script>
+
+    <!-- Regular Packages Controller -->
+    <script src="angular/controller/indexController.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body>
+<body ng-app="dreamtour" ng-controller="IndexController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
     overflow-y: hidden;">
@@ -48,6 +63,7 @@
                 <a class="mdl-navigation__link is-active" href="index.html">Home</a>
                 <a class="mdl-navigation__link" href="pilihpaket.html">Umroh Packages</a>
                 <a class="mdl-navigation__link" href="login.html">Login</a>
+                <a class="mdl-navigation__link" href="login.html">{{ gcm_id }}</a>
             </nav>
         </div>
         <main class="mdl-layout__content">
@@ -118,7 +134,7 @@
         "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
 
         push.on('registration', function(data) {
-            console.log(data.registrationId);
+            //console.log(data.registrationId);
             $("#gcm_id").html(data.registrationId);
         });
 
