--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body ng-app="dreamtour" ng-controller="IndexController">
+<body ng-app="dreamtour" ng-controller="IndexController" ng-init="init()">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
     overflow-y: hidden;">
