--- a/www/feedback.html
+++ b/www/feedback.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="mdl-card__supporting-text">
                         <p>
-                            Beritahu kami jika ada saran.
+                            Beritahu kami saran anda.
                         </p>
                         <form action="#" class="">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
