--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -39,7 +39,7 @@
                 <div style="position:relative; height:330px; width: 100%;">
                     <div id=compass></div>
                     <div id=needle></div>
-                    <div id=info-panel></div>
+                    <!-- <div id=info-panel></div> -->
                 </div>
             </div>
       
