--- a/www/chatroom.html
+++ b/www/chatroom.html
@@ -35,7 +35,7 @@
     <!-- Loading Bar -->
     <script src="js/loading-bar.js"></script>
     <link href="js/loading-bar.css" rel='stylesheet' />
-
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
      <!-- App JS -->
     <script src="angular/ng-modules/angular-ui-router/build/angular-ui-router.js"></script>
     <script src="angular/ng-modules/satellizer/satellizer.js"></script>
@@ -47,15 +47,7 @@
 
 <body ng-app="dreamtour" ng-controller="ChatRoomController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-       <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
-    overflow-y: hidden;">
-        </header>
-        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                <a class="mdl-navigation__link is-active" href="index.html">Home</a>
-                <a class="mdl-navigation__link" href="pilihpaket.html">Umroh Packages</a>
-            </nav>
-        </div>
+       <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
