--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/material.grey-pink.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <!-- Angular JS -->
     <script src="js/angular.min.js"></script>
     <!-- Angular Route Module -->
@@ -63,20 +63,12 @@
 
 <body ng-app="dreamtour" ng-controller="RegularPackagesController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
-    overflow-y: hidden;">
-        </header>
-        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                <a class="mdl-navigation__link is-active" href="index.html">Home</a>
-                <a class="mdl-navigation__link" href="pilihpaket.html">Umroh Packages</a>
-            </nav>
-        </div>
+        <a ng-click="prevPage()" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         
         <!--  <main class="mdl-layout__content" ng-include="'list-regular.html'"></main> -->
         <main class="mdl-layout__content">
             <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
-            <div ng-include="state + '.html'" autoscroll="true"></div>
+            <div ng-include="state + '.html'" autoscroll></div>
 
            
         </main>
