Logo Kepotong Bug

--- a/www/chatroom.html
+++ b/www/chatroom.html
@@ -50,7 +50,9 @@
        <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
-                <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+                <div class="logo-box">
+                    <img class="logo-dreamtour" src="/img/dream.png">
+                </div>
                 <ul class="demo-list-item mdl-list">
                   <li class="mdl-list__item" ng-repeat="room in rooms">
                     <span class="mdl-list__item-primary-content"><a href="chat.html?id={{ room.id }}">
