--- a/www/newsletter.html
+++ b/www/newsletter.html
@@ -50,7 +50,9 @@
         <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
           
-            <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+            <div class="logo-box">
+                <img class="logo-dreamtour" src="/img/dream.png">
+            </div>
             <div class="mdl-grid portfolio-max-width" ng-repeat="news in newsletters">
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card  mdl-card mdl-shadow--4dp portfolio-blog-card-compact">
                     <div class="mdl-card__title ">
