--- a/www/paketExclusive.html
+++ b/www/paketExclusive.html
@@ -66,7 +66,9 @@
         
         <!--  <main class="mdl-layout__content" ng-include="'list-regular.html'"></main> -->
         <main class="mdl-layout__content">
-            <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+            <div class="logo-box">
+                <img class="logo-dreamtour" src="/img/dream.png">
+            </div>
             <div ng-include="state + '.html'"></div>
 
             
