--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -26,7 +26,9 @@
         <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid">
-                <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+                <div class="logo-box">
+                    <img class="logo-dreamtour" src="/img/dream.png">
+                </div>
                 <div style="position:relative; height:330px; width: 100%;">
                     <div id=compass></div>
                     <div id=needle></div>
