--- a/www/doa1.html
+++ b/www/doa1.html
@@ -71,7 +71,9 @@
         <a href="doa.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
 
-            <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+            <div class="logo-box">
+                <img class="logo-dreamtour" src="/img/dream.png">
+            </div>
             <div style="text-align : center; color: white; margin-bottom: 5%;">{{ doas[doa].name }}</div>
             <div class="mdl-grid portfolio-max-width doa" ng-repeat="image in doas[doa].images">
                <img src="img/{{ image }}" style="width: 100%; height: 100%;"">
