--- a/www/doa2.html
+++ b/www/doa2.html
@@ -35,7 +35,9 @@
         <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width doa">
-              <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+              <div class="logo-box">
+                  <img class="logo-dreamtour" src="/img/dream.png">
+              </div>
                <img src="img/doa1.png" style="width: 100%; height: 100%;">
 
             </div>
