--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,9 @@
         <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main ng-show="user_id != null || skiped == true" class="mdl-layout__content">
                 <div class="mdl-grid">
-                    <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+                    <div class="logo-box">
+                        <img class="logo-dreamtour" src="/img/dream.png">
+                    </div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="pilihpaket.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
                           <img src="img/paket.jpg" style="width:100%; height:100%;">
@@ -129,7 +131,9 @@
         <!-- login -->
         <main ng-show="user_id == null && skiped == false"class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
-            <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+                <div class="logo-box">
+                    <img class="logo-dreamtour" src="/img/dream.png">
+                </div>
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text" style="text-align : center;">Login</h2>
