--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -20,7 +20,9 @@
         <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid">
-                <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+                <div class="logo-box">
+                    <img class="logo-dreamtour" src="/img/dream.png">
+                </div>
                 <div style="width:65%;">
                     <p class="dateNow" style="color:white; margin-left: 10px;"></p>
                 </div>
