--- a/www/message.html
+++ b/www/message.html
@@ -52,7 +52,9 @@
         <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
-            <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
+            <div class="logo-box">
+                <img class="logo-dreamtour" src="/img/dream.png">
+            </div>
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Feedback</h2>
