Logo Absolute Path Update

--- a/www/doa-umroh-detail.html
+++ b/www/doa-umroh-detail.html
@@ -72,7 +72,7 @@
         <main class="mdl-layout__content">
 
             <div class="logo-box">
-                <img class="logo-dreamtour" src="/img/dream.png">
+                <img class="logo-dreamtour" src="img/dream.png">
             </div>
             <div style="text-align : center; color: white; margin-bottom: 5%;">{{ doas[doa].name }}</div>
             <div class="mdl-grid portfolio-max-width doa" ng-repeat="image in doas[doa].images">
