--- a/www/newsletter.html
+++ b/www/newsletter.html
@@ -51,7 +51,7 @@
         <main class="mdl-layout__content">
           
             <div class="logo-box">
-                <img class="logo-dreamtour" src="/img/dream.png">
+                <img class="logo-dreamtour" src="img/dream.png">
             </div>
             <div class="mdl-grid portfolio-max-width" ng-repeat="news in newsletters">
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card  mdl-card mdl-shadow--4dp portfolio-blog-card-compact">
