--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -68,7 +68,7 @@
         <!--  <main class="mdl-layout__content" ng-include="'list-regular.html'"></main> -->
         <main class="mdl-layout__content">
             <div class="logo-box">
-                <img class="logo-dreamtour" src="/img/dream.png">
+                <img class="logo-dreamtour" src="img/dream.png">
             </div>
             <div ng-include="state + '.html'" autoscroll></div>
 
