--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -46,7 +46,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="logo-box">
-                    <img class="logo-dreamtour" src="/img/dream.png">
+                    <img class="logo-dreamtour" src="img/dream.png">
                 </div>
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <a href="paketRegular.html" style="text-decoration : none;">
