--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -27,7 +27,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid">
                 <div class="logo-box">
-                    <img class="logo-dreamtour" src="/img/dream.png">
+                    <img class="logo-dreamtour" src="img/dream.png">
                 </div>
                 <div style="position:relative; height:330px; width: 100%;">
                     <div id=compass></div>
