--- a/www/doa.html
+++ b/www/doa.html
@@ -51,7 +51,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
               <div class="logo-box">
-                  <img class="logo-dreamtour" src="/img/dream.png">
+                <img class="logo-dreamtour" src="img/dream.png">
               </div>
                 <ul class="demo-list-item mdl-list">
                   <li class="mdl-list__item" ng-repeat="doa in doas">
