--- a/www/doa2.html
+++ b/www/doa2.html
@@ -36,7 +36,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width doa">
               <div class="logo-box">
-                  <img class="logo-dreamtour" src="/img/dream.png">
+                <img class="logo-dreamtour" src="img/dream.png">
               </div>
                <img src="img/doa1.png" style="width: 100%; height: 100%;">
 
