--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
         <main ng-show="user_id != null || skiped == true" class="mdl-layout__content">
                 <div class="mdl-grid">
                     <div class="logo-box">
-                        <img class="logo-dreamtour" src="/img/dream.png">
+                        <img class="logo-dreamtour" src="img/dream.png">
                     </div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="pilihpaket.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
@@ -133,7 +133,7 @@
         <main ng-show="user_id == null && skiped == false"class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
                 <div class="logo-box">
-                    <img class="logo-dreamtour" src="/img/dream.png">
+                    <img class="logo-dreamtour" src="img/dream.png">
                 </div>
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
