--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -21,7 +21,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid">
                 <div class="logo-box">
-                    <img class="logo-dreamtour" src="/img/dream.png">
+                    <img class="logo-dreamtour" src="img/dream.png">
                 </div>
                 <div style="width:65%;">
                     <p class="dateNow" style="color:white; margin-left: 10px;"></p>
