--- a/www/login.html
+++ b/www/login.html
@@ -50,7 +50,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
                 <div class="logo-box">
-                    <img class="logo-dreamtour" src="/img/dream.png">
+                    <img class="logo-dreamtour" src="img/dream.png">
                 </div>
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
