--- a/www/message.html
+++ b/www/message.html
@@ -47,13 +47,13 @@
     </style>
 </head>
 
-<body>
+<body ng-app="dreamtour" ng-controller="CustomerServiceController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
             <div class="logo-box">
-                <img class="logo-dreamtour" src="/img/dream.png">
+                <img class="logo-dreamtour" src="img/dream.png">
             </div>
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
