--- a/www/list-doa.html
+++ b/www/list-doa.html
@@ -64,11 +64,11 @@
                       Doa Umrah</a>
                     </span>
                   </li>
-                  <li class="mdl-list__item">
+                  <!-- <li class="mdl-list__item">
                     <span class="mdl-list__item-primary-content"><a href="manasik-umroh.html">
                       Manasik Umrah</a>
                     </span>
-                  </li>
+                  </li> -->
                   <li class="mdl-list__item">
                     <span class="mdl-list__item-primary-content"><a href="tips.html">
                       Tips</a>
