--- a/www/doa-umroh-detail.html
+++ b/www/doa-umroh-detail.html
@@ -42,7 +42,7 @@
     <script src="js/app.js"></script>
 
     <!-- Regular Packages Controller -->
-    <script src="angular/controller/doaDetailController.js"></script>
+    <script src="angular/controller/doaUmrohController.js"></script>
 
     <script type="text/javascript">
       function getSearchParameters() {
@@ -66,9 +66,9 @@
     </script>
 </head>
 
-<body ng-app="dreamtour" ng-controller="DoaDetailController">
+<body ng-app="dreamtour" ng-controller="DoaUmrohController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
+        <a href="doa-umroh.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main class="mdl-layout__content">
 
             <div class="logo-box">
