--- a/www/doa1.html
+++ b/www/doa1.html
@@ -76,7 +76,7 @@
             </div>
             <div style="text-align : center; color: white; margin-bottom: 5%;">{{ doas[doa].name }}</div>
             <div class="mdl-grid portfolio-max-width doa" ng-repeat="image in doas[doa].images">
-               <img src="img/{{ image }}" style="width: 100%; height: 100%;"">
+               <img src="img/{{image}}" style="width: 100%; height: 100%;">
 
 
             </div>
